# java-perf-skill

./: CHECKLIST.md  LICENSE  README.md  SKILL.md  TEMPLATE.md  install.sh  update.sh
.claude-plugin/: marketplace.json
.github/workflows/: release.yml  version-check.yml
mcp/: package-lock.json  package.json
mcp/src/: checklist-data.ts  index.ts
mcp/src/utils/: ast-engine.ts  forensic.ts  jdk-engine.ts
performance-troubleshoot/: CHECKLIST.md  REFERENCE.md  SKILL.md  TEMPLATE.md
plugins/java-perf/: CHANGELOG.md  README.md  install.sh
plugins/java-perf/.claude-plugin/: plugin.json
plugins/java-perf/hooks/: hooks.json
plugins/java-perf/rust/src/scanner/: mod.rs
plugins/java-perf/scripts/: install-binary.sh
plugins/java-perf/skills/java-perf/: RULES.md  SKILL.md
rust/: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
rust-mcp/: Cargo.toml  install.sh
rust-mcp/src/: ast_engine.rs  checklist.rs  forensic.rs  jdk_engine.rs  main.rs  mcp.rs
rust-mcp/src/scanner/: config.rs  dockerfile.rs  mod.rs  tree_sitter_java.rs
rust/fixtures/spring-boot-sample/src/main/java/com/example/: UserController.java  UserRepository.java  UserService.java
rust/src/: ast_engine.rs  main.rs  symbol_table.rs  taint.rs
rust/src/scanner/: mod.rs  rule_handlers.rs  tree_sitter_java.rs
rust/tests/snapshots/: mod.rs  snapshot_tests.rs
scripts/: sync-version.sh
skill/: SKILL.md
skills/java-perf/: SKILL.md
